--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_subscription.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_subscription.xml
@@ -15,7 +15,7 @@
         android:id="@+id/layout_top_bar"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/info_text"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView"
         android:background="@color/black_top_bar_bg"
         android:layout_width="0dp"
         android:layout_marginBottom="20dp"
@@ -34,8 +34,7 @@
             android:singleLine="true"
             android:ellipsize="marquee"
             android:layout_height="wrap_content"
-            android:text="Ride Without Comission"
-            tools:text="Ride Without Commission" />
+            android:text="Ride Without Commission" />
 
         <ImageView
             android:id="@+id/ivBack"
@@ -48,98 +47,189 @@
     </android.support.constraint.ConstraintLayout>
 
 
-    <TextView
-    android:id="@+id/info_text"
-    android:paddingLeft="30dp" android:paddingRight="30dp"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    android:layout_width="wrap_content"
-    android:textSize="18sp"
-    android:textColor="@color/black"
-    android:gravity="center"
-   android:visibility="gone"
-    android:text="In last 24 hours if not availed eqwe qwewqe wqqwqw qqwqqw"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    app:layout_constraintTop_toBottomOf="@id/layout_top_bar"/>
+    <ScrollView
+        android:id="@+id/scrollView"
+        app:layout_constraintTop_toBottomOf="@id/layout_top_bar"
 
-
-   <TextView
-       android:id="@+id/label_offers"
-       android:layout_marginLeft="20dp"
-       android:textColor="@color/black"
-       android:textSize="17sp"
-       android:text="Plans:"
-       android:textStyle="bold"
-       android:visibility="gone"
-       app:layout_constraintLeft_toRightOf="parent"
-       android:layout_marginTop="20dp"
-       app:layout_constraintTop_toBottomOf="@id/info_text"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewPlans"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_offers"
-        tools:listitem="@layout/list_item_subscription_offers" />
-
-    <TextView
-        android:id="@+id/label_savings"
-        app:layout_constraintTop_toBottomOf="@id/recyclerViewPlans"
-        android:paddingLeft="30dp" android:paddingRight="30dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="Savings : 3123"
-        android:layout_marginTop="35dp"
-        android:layout_width="wrap_content"
-        android:textSize="20sp"
-        android:visibility="gone"
-        android:gravity="center"
-        android:textColor="@color/new_orange"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/label_outstanding"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/label_savings"
-        android:paddingLeft="30dp" android:paddingRight="30dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="Current Outstanding : 3123"
-        android:layout_width="wrap_content"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:visibility="gone"
-        android:textColor="@color/new_orange"
-        android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/info_text"
+                android:paddingLeft="30dp" android:paddingRight="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:visibility="gone"
+                tools:text="In last 24 hours if not availed eqwe qwewqe wqqwqw qqwqqw"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp" />
 
-    <Button
-        android:id="@+id/buttonSubmitRequest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="200dp"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_outstanding"
-        android:visibility="gone"
-        android:padding="10dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="@string/pay_now"
-        android:background="@drawable/new_orange_btn_selector_rounded"
-        android:textColor="@drawable/white_color_selector"
-        android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/label_offers"
+                android:layout_marginLeft="20dp"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:text="Plans:"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintLeft_toRightOf="parent"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/info_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewPlans"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:visibility="gone"
+                app:layout_constraintLeft_toRightOf="parent"
+                app:layout_constraintRight_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/label_offers"
+                tools:listitem="@layout/list_item_subscription_offers" />
+
+            <TextView
+                android:id="@+id/label_savings"
+                app:layout_constraintTop_toBottomOf="@id/recyclerViewPlans"
+                android:paddingLeft="30dp" android:paddingRight="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:text="Savings : 3123"
+                android:layout_marginTop="35dp"
+                android:layout_width="wrap_content"
+                android:textSize="20sp"
+                android:visibility="gone"
+                android:gravity="center"
+                android:textColor="@color/new_orange"
+                android:layout_height="wrap_content" />
+
+
+
+            <TextView
+                android:id="@+id/label_outstanding"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@id/label_savings"
+                android:paddingLeft="30dp" android:paddingRight="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:text="Current Outstanding : 3123"
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:gravity="center"
+                android:visibility="gone"
+                android:textColor="@color/new_orange"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardViewBreakUp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="4dp"
+                android:visibility="gone"
+                android:background="@android:color/white"
+                app:layout_constraintLeft_toRightOf="parent"
+                app:layout_constraintRight_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/label_outstanding">
+
+
+                <LinearLayout
+                    android:id="@+id/containerLayoutBreakUp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                   <include
+                       android:id="@+id/layoutPlanBreakup"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       layout="@layout/item_plans_amount_breakup"/>
+
+                    <View
+                        android:id="@+id/divider_bottom"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/grey_light"/>
+
+                    <include
+                        android:id="@+id/layoutOutstandingBreakUp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        layout="@layout/item_plans_amount_breakup"/>
+
+                    <View
+                        android:id="@+id/dividerBelowOutstandingBreakup"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/grey_light"/>
+
+
+                    <include
+                        android:id="@+id/layoutTotalBreakUp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        layout="@layout/item_plans_amount_breakup"/>
+
+                </LinearLayout>
+
+
+
+
+
+
+
+            </android.support.v7.widget.CardView>
+
+
+            <Button
+                android:id="@+id/buttonSubmitRequest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="200dp"
+                app:layout_constraintLeft_toRightOf="parent"
+                app:layout_constraintRight_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cardViewBreakUp"
+                android:visibility="gone"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:text="@string/pay_now"
+                android:background="@drawable/new_orange_btn_selector_rounded"
+                android:textColor="@drawable/white_color_selector"
+                android:textSize="15sp" />
+
+
+
+
+        </android.support.constraint.ConstraintLayout>
+
+
+
+    </ScrollView>
+
+
+
+
+
 
     <FrameLayout
         android:id="@+id/rlFragment"
