--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -279,29 +279,77 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/tvDistanceCaptive"
+                    android:id="@+id/tvDistanceCaptiveLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="30px"
+                    android:layout_marginBottom="20px"
                     android:text="@string/distance_covered"
-                    android:textColor="@color/text_color"
-                    android:textSize="36px" />
-                <TextView
-                    android:id="@+id/tvDaysLeft"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="30px"
-                    android:text="@string/days_left"
                     android:textColor="@color/text_color"
                     android:textSize="36px" />
 
                 <TextView
-                    android:id="@+id/tvAmountCollected"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tvDistanceCaptive"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/amount_collected"
-                    android:textColor="@color/text_color"
-                    android:textSize="36px" />
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="@string/rupee_zero"
+                    android:layout_marginBottom="25px"
+                    android:textColor="@color/red_v2"
+                    android:textSize="84px"/>
+
+
+
+                <RelativeLayout
+                    android:layout_marginLeft="35px"
+                    android:layout_marginRight="35px"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tvDaysLeftLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="30px"
+                        android:text="@string/days_left"
+                        android:textColor="@color/text_color"
+                        android:textSize="36px" />
+                    <TextView
+                        android:id="@+id/tvDaysLeft"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginBottom="30px"
+                        android:text="@string/days_left"
+                        android:textColor="@color/text_color"
+                        android:textSize="36px" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_marginLeft="35px"
+                    android:layout_marginRight="35px"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tvAmountCollectedLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/amount_collected"
+                        android:textColor="@color/text_color"
+                        android:textSize="36px" />
+
+                    <TextView
+                        android:id="@+id/tvAmountCollected"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/amount_collected"
+                        android:textColor="@color/text_color"
+                        android:textSize="36px" />
+                </RelativeLayout>
+
+
+
+
 
 
             </LinearLayout>
@@ -388,6 +436,7 @@
             </RelativeLayout>
             
             <View
+                android:id="@+id/divider_below_ride_history_bar"
                 android:layout_width="match_parent"
                 android:layout_height="22px"
                 android:background="@drawable/background_divider_drawable"/>
