--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -273,15 +273,26 @@
                 android:orientation="vertical"
                 android:gravity="center"
                 android:paddingTop="30px"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:paddingBottom="40px"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/dateTimeValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="20px"
+                    android:singleLine="true"
+                    android:text="23 June, 2014 18:88 AM"
+                    android:textColor="@color/grey_light_v2"
+                    android:textSize="30px" />
 
                 <TextView
                     android:id="@+id/tvDistanceCaptiveLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:layout_marginBottom="20px"
                     android:text="@string/distance_covered"
                     android:textColor="@color/text_color"
@@ -289,16 +300,41 @@
 
                 <TextView
                     android:id="@+id/tvDistanceCaptive"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="@string/rupee_zero"
                     android:layout_marginBottom="25px"
                     android:textColor="@color/red_v2"
-                    android:textSize="84px"/>
+                    android:textSize="70px"/>
 
 
+                <RelativeLayout
+                    android:layout_marginLeft="35px"
+                    android:layout_marginRight="35px"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tvTargetDistanceLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="30px"
+                        android:text="@string/target_distance"
+                        android:textColor="@color/text_color"
+                        android:textSize="36px" />
+                    <TextView
+                        android:id="@+id/tvTargetDistance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginBottom="30px"
+                        android:gravity="right"
+                        android:layout_toRightOf="@id/tvTargetDistanceLabel"
+                        android:textColor="@color/text_color"
+                        android:textSize="36px" />
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_marginLeft="35px"
@@ -318,6 +354,8 @@
                         android:id="@+id/tvDaysLeft"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:layout_toRightOf="@id/tvDaysLeftLabel"
                         android:layout_alignParentRight="true"
                         android:layout_marginBottom="30px"
                         android:text="@string/days_left"
@@ -333,12 +371,14 @@
                         android:id="@+id/tvAmountCollectedLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/amount_collected"
+                        android:text="@string/cash_collected_from_user"
                         android:textColor="@color/text_color"
                         android:textSize="36px" />
 
                     <TextView
                         android:id="@+id/tvAmountCollected"
+                        android:gravity="right"
+                        android:layout_toRightOf="@id/tvAmountCollectedLabel"
                         android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
