--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_amnt_header.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_amnt_header.xml
@@ -18,8 +18,7 @@
         android:singleLine="true"
         android:text="23 June, 2014 18:88 AM"
         android:textColor="@color/grey_light_v2"
-        android:textSize="30px"
-        />
+        android:textSize="30px" />
 
     <TextView
         android:id="@+id/textViewEarningsValue"
