--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_subscription_offers.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_subscription_offers.xml
@@ -20,7 +20,7 @@
         android:textColor="@color/black"
         android:textSize="15sp"
         android:clickable="false"
-        tools:text="10 rupees"
+        tools:text="10"
         android:paddingLeft="15dp" />
 
    <!-- <TextView
@@ -35,7 +35,7 @@
         app:layout_constraintRight_toLeftOf="@id/plan_validity"
         app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
-        tools:text="10 rupees" />-->
+        tools:text="10" />-->
 
 
 
