--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
@@ -7,34 +7,7 @@
     android:animateLayoutChanges="true"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_layout"
-        android:layout_width="match_parent"
-        android:theme="@style/AppTheme"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/black_top_bar_bg"
-            android:textAlignment="center"
-
-            app:titleTextColor="@color/white">
-
-            <TextView
-                android:id="@+id/tvToolbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textAllCaps="true"
-                android:textSize="18sp"
-                android:layout_gravity="center"
-                android:textColor="@color/white"/>
-
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/activity_toolbar" />
 
     <FrameLayout
         android:id="@+id/container"
