--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -331,6 +331,35 @@
 
 
             </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/manaulRequestRl"
+                android:layout_width="match_parent"
+                android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
+                android:splitMotionEvents="false">
+
+                <ImageView
+                    android:id="@+id/imageViewManualRequestRl"
+                    android:layout_width="56px"
+                    android:layout_height="38px"
+                    android:layout_marginLeft="20px"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_manual_ride"
+                    android:tag="mwar"/>
+
+                <TextView
+                    android:id="@+id/tvManualRequest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/imageViewManualRequestRl"
+                    android:layout_marginLeft="8px"
+                    android:text="@string/menu_label_manual_ride"
+                    android:textColor="@color/white"
+                    android:textSize="36px"/>
+
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/earningsRL"
